[gd_scene load_steps=11 format=3 uid="uid://bgjtm147ljlnl"]

[ext_resource type="Script" path="res://Scenes/mini_games/text_edit_laptop/laptop_screen.gd" id="1_i4fvo"]
[ext_resource type="Texture2D" uid="uid://ctvl1u2dfgne0" path="res://Assets/EasterEggs/Custom Illustrations - Stanford Monuments-39.png" id="2_am0og"]
[ext_resource type="Texture2D" uid="uid://cnu5aa2hfql8t" path="res://Assets/AdjustedStandfordAssets/BlankFolder.png" id="2_uqheb"]
[ext_resource type="Texture2D" uid="uid://cwis8k14rht7u" path="res://Assets/StanfordAssets/custom-illustrations-stanford-monuments-assets-05.png" id="3_t2lm6"]
[ext_resource type="PackedScene" uid="uid://c7jmyelp4t6u4" path="res://Scenes/mini_games/text_edit_laptop/text_edit_laptop.tscn" id="4_5je3t"]
[ext_resource type="Texture2D" uid="uid://cyd1gdg13gklw" path="res://Assets/EasterEggs/Custom Illustrations - Stanford Monuments-49.png" id="5_uh583"]
[ext_resource type="Texture2D" uid="uid://7odn8r10of4g" path="res://Assets/AdjustedStandfordAssets/PowerButton.png" id="7_x3mdp"]

[sub_resource type="LabelSettings" id="LabelSettings_x4462"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4iaek"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t142b"]
font_color = Color(0, 0, 0, 1)

[node name="LaptopScreen" type="Node2D"]
script = ExtResource("1_i4fvo")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 128.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Screen" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0333333
anchor_top = 0.0672269
anchor_right = 0.966667
anchor_bottom = 0.907563
grow_horizontal = 2
grow_vertical = 2
color = Color(0.576471, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CampPromo" type="Sprite2D" parent="."]
position = Vector2(481, 918.875)
scale = Vector2(0.206667, 0.106167)
texture = ExtResource("2_am0og")

[node name="UselessFolder" type="TextureButton" parent="."]
offset_left = 96.0
offset_top = 224.0
offset_right = 1673.0
offset_bottom = 1330.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_uqheb")

[node name="USBFolder" type="TextureButton" parent="."]
offset_left = 100.0
offset_top = 361.0
offset_right = 1677.0
offset_bottom = 1467.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_uqheb")

[node name="WordApp" type="TextureButton" parent="."]
offset_left = 92.0
offset_top = 487.0
offset_right = 2342.0
offset_bottom = 2737.0
scale = Vector2(0.09, 0.09)
texture_normal = ExtResource("3_t2lm6")

[node name="StickyNote" type="ColorRect" parent="."]
offset_left = 1475.0
offset_top = 224.0
offset_right = 1821.0
offset_bottom = 489.0
color = Color(1, 1, 0.486275, 1)

[node name="Label" type="Label" parent="StickyNote"]
layout_mode = 0
offset_left = 13.0
offset_top = 24.0
offset_right = 334.0
offset_bottom = 246.0
text = "FINISH THE DOCUMENTS!!
 (green icon)  :)

I left the words needed to 
finish in the USB drive.
 Click its folder to see them."
label_settings = SubResource("LabelSettings_x4462")
horizontal_alignment = 1

[node name="RandomFile" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="RandomFile"]
offset_left = 1024.0
offset_top = 515.0
offset_right = 1634.0
offset_bottom = 943.0
color = Color(1, 0.498039, 0, 1)

[node name="CustomIllustrations-StanfordMonuments-49" type="Sprite2D" parent="RandomFile"]
position = Vector2(1345, 716.5)
scale = Vector2(0.2, 0.196)
texture = ExtResource("5_uh583")

[node name="RandomExit" type="Button" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
offset_left = 1585.0
offset_top = 521.0
offset_right = 1625.0
offset_bottom = 561.0
text = "X"

[node name="USBContents" type="Node2D" parent="."]
visible = false
position = Vector2(-327, -43)

[node name="ColorRect" type="ColorRect" parent="USBContents"]
offset_left = 576.0
offset_top = 256.0
offset_right = 918.0
offset_bottom = 960.0
color = Color(0.843137, 0.843137, 0.843137, 1)

[node name="Label" type="Label" parent="USBContents/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.300536
anchor_top = 0.0340909
anchor_right = 0.651413
anchor_bottom = 0.0710227
text = "Commendation"
label_settings = SubResource("LabelSettings_4iaek")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="USBContents/ColorRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 221.0
offset_bottom = 698.0
text = "Page 1:
- Patients 
- Teams
- Students

Page 2:
- Population Health
- Collaborates
- Data Use

Page 3:
- Support Strategies
- Technical
- Communication
- Individualized Learning

Page 4:
- Research
- Creativity
- CPD

Page 5:
- Patient
- Healthcare
- Performance
"
label_settings = SubResource("LabelSettings_t142b")

[node name="USBExit" type="Button" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
offset_left = 545.0
offset_top = 219.0
offset_right = 585.0
offset_bottom = 259.0
text = "X"

[node name="TextEditLaptop" parent="." instance=ExtResource("4_5je3t")]
visible = false
position = Vector2(407, 109)

[node name="TextEditExit" type="Button" parent="."]
visible = false
modulate = Color(1, 0.0901961, 0.0588235, 1)
offset_left = 1640.0
offset_top = 239.0
offset_right = 1676.0
offset_bottom = 270.0
scale = Vector2(2, 2)
text = "X"

[node name="Exit" type="TextureButton" parent="."]
offset_left = 1746.0
offset_top = 881.0
offset_right = 2524.0
offset_bottom = 1661.0
scale = Vector2(0.12, 0.12)
texture_normal = ExtResource("7_x3mdp")

[connection signal="pressed" from="UselessFolder" to="." method="_on_useless_folder_pressed"]
[connection signal="pressed" from="USBFolder" to="." method="_on_usb_folder_pressed"]
[connection signal="pressed" from="WordApp" to="." method="_on_word_app_pressed"]
[connection signal="pressed" from="RandomExit" to="." method="_on_random_exit_pressed"]
[connection signal="pressed" from="USBExit" to="." method="_on_usb_exit_pressed"]
[connection signal="completed" from="TextEditLaptop" to="." method="_on_text_edit_laptop_completed"]
[connection signal="pressed" from="TextEditExit" to="." method="_on_text_edit_exit_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
